Revert "test site cname"
This reverts commit 7fb45e858438d21a829cb7d6109c2ca85abefd84.

--- a/config.toml
+++ b/config.toml
@@ -1,5 +1,5 @@
 ################################# Default configuration ###################
-baseURL = "https://axiosnm.com/"
+baseURL = "https://axiosnm.github.io/"
 title = "Axios Technology"
 theme = "meghna-hugo"
 # post pagination
