Begin color palette and new banner

--- a/data/en/banner.yml
+++ b/data/en/banner.yml
@@ -5,8 +5,8 @@ banner:
   bg_image : "images/backgrounds/hero-area.jpg"
   icon : "" # themify icon pack : https://themify.me/themify-icons
   title : "Axios Technology"
-  content : "Providing Digital Forensics & Cyber Incident Reponse Services"
+  content : "Digital Forensics Services & Cyber Incident Reponse"
   button:
     enable : true
     label : "Explore"
-    link : "#services"
+    link : "#about"
