--- a/data/en/service.yml
+++ b/data/en/service.yml
@@ -4,22 +4,22 @@ service:
   title : Our Services
   service_item :
     # service item loop
-    - name : WordPress Theme
-      icon : ti-world # themify icon pack : https://themify.me/themify-icons
-      content : Lorem ipsum dolor sit amet, consectetur.. Sed id lorem eget orci dictum facilisis vel id tellus.Nullam iaculis arcu at mauris dapibus consectetur.
+    - name : Forensic Imaging
+      icon : ti-harddrives # themify icon pack : https://themify.me/themify-icons
+      content : With modern tools and techniques, we can acquire and preserve digital evidence
       
     # service item loop
-    - name : Responsive Design
+    - name : Incident Response
       icon : ti-layout # themify icon pack : https://themify.me/themify-icons
       content : Lorem ipsum dolor sit amet, consectetur.. Sed id lorem eget orci dictum facilisis vel id tellus.Nullam iaculis arcu at mauris dapibus consectetur.
       
     # service item loop
-    - name : Media &amp; Advertisement
+    - name : Data Recovery
       icon : ti-blackboard # themify icon pack : https://themify.me/themify-icons
-      content : Lorem ipsum dolor sit amet, consectetur.. Sed id lorem eget orci dictum facilisis vel id tellus.Nullam iaculis arcu at mauris dapibus consectetur.
+      content : USB or Hard Drive unreadable? There's a good chance we can recover that data.
       
     # service item loop
-    - name : Graphic Design
+    - name : Expert Witness Services
       icon : ti-palette # themify icon pack : https://themify.me/themify-icons
       content : Lorem ipsum dolor sit amet, consectetur.. Sed id lorem eget orci dictum facilisis vel id tellus.Nullam iaculis arcu at mauris dapibus consectetur.
       
