--- a/data/en/team.yml
+++ b/data/en/team.yml
@@ -4,9 +4,9 @@ team:
   title : Our Team
   team_member :
     # team member loop
-    - name : Abul Mal Muhit
-      image_webp : images/team/team-1.webp
-      image : images/team/team-1.jpg
+    - name : Tommy Harris
+      image_webp : images/team/tommy.webp
+      image : images/team/tommy.jpg
       designation : CEO/Founder
       content : Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur necessitatibus ullam, culpa odio.
       social :
@@ -20,10 +20,10 @@ team:
           link : "#"
         
     # team member loop
-    - name : Frank Miller
-      image_webp : images/team/team-2.webp
-      image : images/team/team-2.jpg
-      designation : Manager
+    - name : Myka
+      image_webp : images/team/myka.webp
+      image : images/team/myka.jpg
+      designation : Intruder Alarm
       content : Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur necessitatibus ullam, culpa odio.
       social :
         - icon : ti-facebook # themify icon pack : https://themify.me/themify-icons
@@ -36,10 +36,10 @@ team:
           link : "#"
         
     # team member loop
-    - name : Michael Jonson
-      image_webp : images/team/team-3.webp
-      image : images/team/team-3.jpg
-      designation : Web Developer
+    - name : Desmond
+      image_webp : images/team/desmond.webp
+      image : images/team/desmond.jpg
+      designation : Fetcher
       content : Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur necessitatibus ullam, culpa odio.
       social :
         - icon : ti-facebook # themify icon pack : https://themify.me/themify-icons
@@ -52,10 +52,10 @@ team:
           link : "#"
         
     # team member loop
-    - name : Mo. Kha. Alamgir
-      image_webp : images/team/team-4.webp
-      image : images/team/team-4.jpg
-      designation : SEO Specialist
+    - name : Hamish
+      image_webp : images/team/hamish.webp
+      image : images/team/hamish.jpg
+      designation : Master Infilatrator
       content : Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur necessitatibus ullam, culpa odio.
       social :
         - icon : ti-facebook # themify icon pack : https://themify.me/themify-icons
