--- a/config.toml
+++ b/config.toml
@@ -42,22 +42,22 @@ link = "plugins/google-map/map.js"
 
 ################### English Navigation ########################
 [[Languages.en.menu.main]]
-name = "about"
+name = "About"
 url = "#about"
 weight = 1
 
 [[Languages.en.menu.main]]
-name = "services"
+name = "Services"
 url = "#services"
 weight = 2
 
 [[Languages.en.menu.main]]
-name = "team"
+name = "Team"
 url = "#team"
 weight = 4
 
 [[Languages.en.menu.main]]
-name = "contact"
+name = "Contact"
 url = "#contact"
 weight = 7
 
