--- a/data/en/team.yml
+++ b/data/en/team.yml
@@ -9,14 +9,13 @@ team:
       image : images/team/tommy.jpg
       designation : CEO/Founder
       content : Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur necessitatibus ullam, culpa odio.
+      urlslug : team/tommy-harris
       social :
+        - icon : ti-github
+          link : https://github.com/tobraha
         - icon : ti-twitter-alt # themify icon pack : https://themify.me/themify-icons
-          link : "#"
-        - icon : ti-linkedin # themify icon pack : https://themify.me/themify-icons
-          link : "#"
-        - icon : ti-dribbble # themify icon pack : https://themify.me/themify-icons
-          link : "#"
-        
+          link : "https://twitter.com/tobraha"
+
     # team member loop
     - name : Myka
       image_webp : images/team/myka.webp
