--- a/data/en/team.yml
+++ b/data/en/team.yml
@@ -7,7 +7,7 @@ team:
     - name : Tommy Harris
       image_webp : images/team/tommy.webp
       image : images/team/tommy.jpg
-      designation : CEO/Founder
+      designation : Founder & Forensic Lead
       content : Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur necessitatibus ullam, culpa odio.
       urlslug : team/tommy-harris
       social :
