--- a/config.toml
+++ b/config.toml
@@ -70,7 +70,7 @@ author = "Tommy Harris"
 # Google Analytics
 google_analytics_id = "" # Your ID
 # post share
-post_share = true
+post_share = false
 
 # preloader
 [params.preloader]
