--- a/data/en/team.yml
+++ b/data/en/team.yml
@@ -5,8 +5,8 @@ team:
   team_member :
     # team member loop
     - name : Tommy Harris
-      image_webp : images/team/tommy.webp
-      image : images/team/tommy.jpg
+      image_webp : images/team/tommy-profile.webp
+      image : images/team/tommy-profile.jpg
       designation : Founder & Forensic Lead
       content : Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur necessitatibus ullam, culpa odio.
       urlslug : team/tommy-harris
@@ -18,17 +18,17 @@ team:
 
     # team member loop
     - name : John Harris
-      image_webp : images/team/desmond.webp
-      image : images/team/desmond.jpg
+      image_webp : images/team/john-profile.webp
+      image : images/team/john-profile.jpg
       designation : Director of Operations
       content : Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur necessitatibus ullam, culpa odio.
       urlslug : team/john-harris
-      social :
-        - icon : ti-facebook # themify icon pack : https://themify.me/themify-icons
-          link : "#"
-        - icon : ti-twitter-alt # themify icon pack : https://themify.me/themify-icons
-          link : "#"
-        - icon : ti-linkedin # themify icon pack : https://themify.me/themify-icons
-          link : "#"
-        - icon : ti-dribbble # themify icon pack : https://themify.me/themify-icons
-          link : "#"
+      # social :
+      #   - icon : ti-facebook # themify icon pack : https://themify.me/themify-icons
+      #     link : "#"
+      #   - icon : ti-twitter-alt # themify icon pack : https://themify.me/themify-icons
+      #     link : "#"
+      #   - icon : ti-linkedin # themify icon pack : https://themify.me/themify-icons
+      #     link : "#"
+      #   - icon : ti-dribbble # themify icon pack : https://themify.me/themify-icons
+      #     link : "#"
