--- a/data/en/team.yml
+++ b/data/en/team.yml
@@ -8,7 +8,7 @@ team:
       image_webp : images/team/tommy-profile.webp
       image : images/team/tommy-profile.jpg
       designation : Founder & Forensic Lead
-      content : Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur necessitatibus ullam, culpa odio.
+      content : Seasoned in the realms of Cyber Security and Systems Administration - certified Forensic Examiner.
       urlslug : team/tommy-harris
       social :
         - icon : ti-github
@@ -21,14 +21,8 @@ team:
       image_webp : images/team/john-profile.webp
       image : images/team/john-profile.jpg
       designation : Director of Operations
-      content : Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur necessitatibus ullam, culpa odio.
+      content : Career fire fighter, currently a Lieutenant in the Albuquerque Fire Department with a knack for business administration.
       urlslug : team/john-harris
-      # social :
-      #   - icon : ti-facebook # themify icon pack : https://themify.me/themify-icons
-      #     link : "#"
-      #   - icon : ti-twitter-alt # themify icon pack : https://themify.me/themify-icons
-      #     link : "#"
-      #   - icon : ti-linkedin # themify icon pack : https://themify.me/themify-icons
-      #     link : "#"
-      #   - icon : ti-dribbble # themify icon pack : https://themify.me/themify-icons
-      #     link : "#"
+      social :
+        - icon : ti-email # themify icon pack : https://themify.me/themify-icons
+          link : "mailto:john@axiosnm.com"
