--- a/data/en/team.yml
+++ b/data/en/team.yml
@@ -15,6 +15,8 @@ team:
           link : https://github.com/tobraha
         - icon : ti-twitter-alt # themify icon pack : https://themify.me/themify-icons
           link : "https://twitter.com/tobraha"
+        - icon : ti-medall-alt
+          link : "https://www.credly.com/users/thomas-harris.f9c98888/badges"
 
     # team member loop
     - name : John Harris
