js dynamic copyright date

--- a/config.toml
+++ b/config.toml
@@ -123,4 +123,4 @@ languageCode = "en-us"
 contentDir = "content/english"
 weight = 1
 home = "Home"
-copyright = "Copyright &copy; 2023 Axios Technology LLC | Theme by [Themefisher](https://themefisher.com)"
+copyright = "Axios Technology LLC"
